<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pedra_papel_tesoura_1x1x1"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <ImageView
        android:id="@+id/imgPlayerChoice"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:src="@drawable/ic_rps"
        android:contentDescription="@string/imagem_escolha_jogador"/>

    <ImageView
        android:id="@+id/imgComputerChoice1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/imgPlayerChoice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/imgComputerChoice2"
        app:layout_constraintHorizontal_bias="0.5"
        android:src="@drawable/ic_rps"
        android:contentDescription="@string/imagem_escolha_computador"/>

    <ImageView
        android:id="@+id/imgComputerChoice2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/imgPlayerChoice"
        app:layout_constraintStart_toStartOf="@id/imgComputerChoice1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:src="@drawable/ic_rps"
        android:contentDescription="@string/imagem_escolha_computador"/>

    <Button
        android:id="@+id/btnRock"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/pedra"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnPaper"
        app:layout_constraintTop_toBottomOf="@id/imgComputerChoice2"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"/>

    <Button
        android:id="@+id/btnPaper"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/papel"
        app:layout_constraintStart_toEndOf="@id/btnRock"
        app:layout_constraintEnd_toStartOf="@id/btnScissors"
        app:layout_constraintTop_toBottomOf="@id/imgComputerChoice2"
        android:layout_marginTop="32dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"/>

    <Button
        android:id="@+id/btnScissors"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tesoura"
        app:layout_constraintStart_toEndOf="@id/btnPaper"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgComputerChoice2"
        android:layout_marginTop="32dp"
        android:layout_marginStart="8dp"/>

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/btnRock"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
